fix(board): remove overflow ellipsis on departures

--- a/next-tavla/src/Board/scenarios/Table/components/Time/styles.module.css
+++ b/next-tavla/src/Board/scenarios/Table/components/Time/styles.module.css
@@ -1,6 +1,7 @@
 .timeContainer {
     font-weight: 600;
     font-size: 1.5em;
+    overflow: visible;
 }
 
 .aimedDepartureTime {
